# ResolucionSudoku

./: CMakeLists.txt  sudoku.JSON.json  sudoku_solver.cpp
